--- a/index.html
+++ b/index.html
@@ -4,9 +4,32 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Testing project</title>
+    <title>BD Medi Care</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;500;700;800&display=swap" rel="stylesheet">
+<link rel="shortcut icon" href="images/logo.png" type="image/x-icon">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <section class="top-bar">
+        <div class="logo">
+           <img src="images/logo.png" alt="">
+        </div>
+        <div class="top-nav">
+            <nav>Home</nav>
+            <nav>About Us</nav>
+            <nav>Services</nav>
+            <nav>Contact</nav>
+        </section>
+        </div>
+            <div class="top-banner">
+                <img src="images/team-doctors.jpg" alt="">
+            </div>  
+            <div class="declaration-block">
+                <div class="working-hour"><p>This is a block for declation</p></div>
+                <div class="appoint-block"><p>This is a block for declation</p></div>
+                <div class="contact-block"><p>This is a block for declation</p></div> 
+            </div> 
 </body>
 </html>
